Fixed issue with navbar links not working due to navbar overlapping the section

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -1,3 +1,7 @@
 #contact {
 	background-color: lightgray;
 }
+
+.contact__container {
+	text-align: center;
+}
