--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,8 +1,11 @@
+.navbar {
+	position: sticky;
+	top: 0;
+}
+
 .navbar__container {
 	display: flex;
 	flex-wrap: wrap;
-	position: fixed;
-	top: 0;
 	padding: 15px;
 	width: 100%;
 	background: gray;
